# calendar-sync

./: .gitignore  LICENSE  Makefile  README.md  SKILL.md  pyproject.toml
config/: sample.config.json
scripts/: calendar_sync.py  cli.py  state.py
scripts/notify/: alerts.py
scripts/providers/: __init__.py  base.py  google.py  msgraph.py
scripts/sync/: engine.py  metadata.py  rules.py
tests/: conftest.py  test_engine.py  test_google_provider.py  test_metadata.py  test_msgraph_provider.py  test_rules.py  test_smoke.py  test_state.py
